--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Illustration Portfolio</title>
+    <title>Andrew James Draws</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>My Illustration Portfolio</h1>
+        <h1>Andrew James</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -27,7 +27,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 My Illustration Portfolio</p>
+        <p>&copy; 2024 Andrew James</p>
     </footer>
 </body>
 </html>
