--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Andrew James</h1>
+        <h1>Andrew James.</h1>
+        Artist. Illustrator.
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
