--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Andrew James.</h1>
-        Artist. Illustrator.
+        <h3>Artist. Illustrator. Teacher.</h3>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
