--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,14 @@
         <section>
             <h2>My Work</h2>
             <div class="portfolio-gallery">
-                <img src="images/art1.jpg" alt="Artwork 1">
+                <img src="images/art1.png" alt="Artwork 1">
+                <img src="images/art1.png" alt="Artwork 1">
+                <img src="images/art1.png" alt="Artwork 1">
+                <img src="images/art1.png" alt="Artwork 1">
+                <img src="images/art1.png" alt="Artwork 1">
+                <img src="images/art1.png" alt="Artwork 1">
+                <img src="images/art1.png" alt="Artwork 1">
+                <img src="images/art1.png" alt="Artwork 1">
                 <img src="images/art2.jpg" alt="Artwork 2">
                 <img src="images/art3.jpg" alt="Artwork 3">
                 <!-- Add more images as needed -->
