--- a/portfolio.html
+++ b/portfolio.html
@@ -23,18 +23,18 @@
         <section>
             <h2>My Work</h2>
             <div class="portfolio-gallery">
-                <img src="images/20240201_150628 (1).jpg" alt="Artwork 1">
-                <img src="images/Breakfast.jpg" alt="Artwork 2">
-                <img src="images/IMG_0107 (1).jpg" alt="Artwork 3">
-                <img src="images/IMG_1076.jpg" alt="Artwork 4">
-                <img src="images/IMG_1077.jpg" alt="Artwork 5">
-                <img src="images/IMG_1078.jpg" alt="Artwork 6">
-                <img src="images/art1.png" alt="Artwork 7">
-                <img src="images/diningroomview.jpg" alt="Artwork 8">
-                <img src="images/fridaynight.jpg" alt="Artwork 9">
-                <img src="images/lyallbaydairy.jpg" alt="Artwork 10">
-                <img src="images/navrangdairy.jpg" alt="Artwork 11">
-                <img src="images/the_basics.png" alt="Artwork 12">
+                <img src="images/20240201_150628 (1).jpg" alt="Artwork 1"> <br />
+                <img src="images/Breakfast.jpg" alt="Artwork 2"><br />
+                <img src="images/IMG_0107 (1).jpg" alt="Artwork 3"><br />
+                <img src="images/IMG_1076.jpg" alt="Artwork 4"><br />
+                <img src="images/IMG_1077.jpg" alt="Artwork 5"><br />
+                <img src="images/IMG_1078.jpg" alt="Artwork 6"><br />
+                <img src="images/art1.png" alt="Artwork 7"><br />
+                <img src="images/diningroomview.jpg" alt="Artwork 8"><br />
+                <img src="images/fridaynight.jpg" alt="Artwork 9"><br />
+                <img src="images/lyallbaydairy.jpg" alt="Artwork 10"><br />
+                <img src="images/navrangdairy.jpg" alt="Artwork 11"><br />
+                <img src="images/the_basics.png" alt="Artwork 12"><br />
             </div>
         </section>
     </main>
