--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>My Portfolio</h1>
+    <header><h1>Andrew James.</h1> <h3>Artist. Illustrator. Wellington, New Zealand</h3>
+
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -26,11 +26,13 @@
                 <img src="images/20240201_150628 (1).jpg" alt="Artwork 1"> <br />
                 <img src="images/Breakfast.jpg" alt="Artwork 2"><br />
                 <img src="images/art1.png" alt="Artwork 7"><br />
+                Spot illustrations for a substack article.
                 <img src="images/diningroomview.jpg" alt="Artwork 8"><br />
                 <img src="images/fridaynight.jpg" alt="Artwork 9"><br />
                 <img src="images/lyallbaydairy.jpg" alt="Artwork 10"><br />
                 <img src="images/navrangdairy.jpg" alt="Artwork 11"><br />
                 <img src="images/the_basics.png" alt="Artwork 12"><br />
+                Spots for an email series. <a href="www.predatorfreenz.org>Predator Free New Zealand Trust</a>
             </div>
         </section>
     </main>
