--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,8 @@
         <section>
             <h2>My Work</h2>
             <div class="portfolio-gallery">
+                <img src="images/VOC_1-1.jpg.jpg" alt="Artwork 1"> <br />
+                <img src="images/VOC_5-1.jpg" alt="Artwork 2"><br />
                 <img src="images/20240201_150628 (1).jpg" alt="Artwork 1"> <br />
                 <img src="images/Breakfast.jpg" alt="Artwork 2"><br />
                 <img src="images/art1.png" alt="Artwork 7"><br />
