--- a/portfolio.html
+++ b/portfolio.html
@@ -22,18 +22,18 @@
         <section>
             <h2>My Work</h2>
             <div class="portfolio-gallery">
-                <img src="images/VOC_1-1.jpg.jpg" alt="Artwork 1"> <br />
-                <img src="images/VOC_5-1.jpg" alt="Artwork 2"><br />
-                <img src="images/20240201_150628 (1).jpg" alt="Artwork 1"> <br />
-                <img src="images/Breakfast.jpg" alt="Artwork 2"><br />
-                <img src="images/art1.png" alt="Artwork 7"><br />
+                <img src="images/WestlandWondersMap.jpg" alt="Artwork 1">
+                <img src="images/VOC_1-1.jpg.jpg" alt="Artwork 1">
+                <img src="images/VOC_5-1.jpg" alt="Artwork 2">
+                <img src="images/20240201_150628 (1).jpg" alt="Artwork 1"> 
+                <img src="images/Breakfast.jpg" alt="Artwork 2">
+                <img src="images/art1.png" alt="Artwork 7">
                 Spot illustrations for a substack article.
-                <img src="images/diningroomview.jpg" alt="Artwork 8"><br />
-                <img src="images/fridaynight.jpg" alt="Artwork 9"><br />
-                <img src="images/lyallbaydairy.jpg" alt="Artwork 10"><br />
-                <img src="images/navrangdairy.jpg" alt="Artwork 11"><br />
-                <img src="images/the_basics.png" alt="Artwork 12"><br />
-                Spots for an email series. <a href="www.predatorfreenz.org>Predator Free New Zealand Trust</a>
+                <img src="images/diningroomview.jpg" alt="Artwork 8">
+                <img src="images/fridaynight.jpg" alt="Artwork 9">
+                <img src="images/lyallbaydairy.jpg" alt="Artwork 10">
+                <img src="images/navrangdairy.jpg" alt="Artwork 11">
+                <img src="images/the_basics.png" alt="Artwork 12">
             </div>
         </section>
     </main>
