--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
         <section>
             <div class="portfolio-gallery">
                 <img src="images/WestlandWondersMap.jpg" alt="Artwork 1">
-                <img src="images/VOC_1-1.jpg.jpg" alt="Artwork 1">
+                <img src="images/VOC_1-1.jpg" alt="Artwork 1">
                 <img src="images/VOC_5-1.jpg" alt="Artwork 2">
                 <img src="images/20240201_150628 (1).jpg" alt="Artwork 1"> 
                 <img src="images/Breakfast.jpg" alt="Artwork 2">
