--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header><h1>Andrew James.</h1> <h3>Artist. Illustrator. Wellington, New Zealand</h3>
+    <header><h1>Andrew James.</h1> <h3>Artist. Illustrator.<br />Wellington, New Zealand</h3>
 
         <nav>
             <ul>
