--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 My Illustration Portfolio</p>
+        <p>&copy; 2024 Andrew James</p>
     </footer>
     <script src="script.js"></script>
 
