--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!-- Lightbox CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
+
+<!-- Lightbox JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,15 +27,15 @@
     <main>
         <section>
             <div class="portfolio-gallery">
-                <img src="images/WestlandWondersMap.jpg" alt="Artwork 1">
-                <img src="images/VOC_1-1.jpg" alt="Artwork 1">
-                <img src="images/VOC_5-1.jpg" alt="Artwork 2">
-                <img src="images/20240201_150628 (1).jpg" alt="Artwork 1"> 
-                <img src="images/Breakfast.jpg" alt="Artwork 2">
-                <img src="images/art1.png" alt="Artwork 7">
-                <img src="images/fridaynight.jpg" alt="Artwork 9">
-                <img src="images/lyallbaydairy.jpg" alt="Artwork 10">
-                <img src="images/the_basics.png" alt="Artwork 12">
+                <img src="images/WestlandWondersMap.jpg" data-lightbox="portfolio" alt="Artwork 1">
+                <img src="images/VOC_1-1.jpg" data-lightbox="portfolio" alt="Artwork 1">
+                <img src="images/VOC_5-1.jpg" data-lightbox="portfolio" alt="Artwork 2">
+                <img src="images/20240201_150628 (1).jpg" data-lightbox="portfolio" alt="Artwork 1"> 
+                <img src="images/Breakfast.jpg" data-lightbox="portfolio" alt="Artwork 2">
+                <img src="images/art1.png" data-lightbox="portfolio" alt="Artwork 7">
+                <img src="images/fridaynight.jpg" data-lightbox="portfolio" alt="Artwork 9">
+                <img src="images/lyallbaydairy.jpg" data-lightbox="portfolio" alt="Artwork 10">
+                <img src="images/the_basics.png" data-lightbox="portfolio" alt="Artwork 12">
             </div>
         </section>
     </main>
