--- a/about.html
+++ b/about.html
@@ -26,10 +26,17 @@
 
     <main>
         <section>
-          <p>Hi, I'm Andrew. I'm an Illustrator from Wellington.</p>
-          <p>I love drawing on location. I've been obsessively recording my life in little books for more than a decade.</p>
-          <p>I love making complex science understandable with words, drawings and humour. I'm a qualified meteorologist and I can talk about a lot more than just the weather./p>
+           <h3>Hi, I'm Andrew. I'm an Illustrator from Wellington.</h3>
+          <p>I love drawing on location. I've obsessively recorded my life in little books for over a decade.</p>
+          <p>I love making complex science understandable with words, drawings and humour. As a qualified meteorologist, I have science nous. And I can talk about much more than just the weather./p>
           <p>When not drawing, you can find me chasing my kids, cooking elaborate meals, growing vegetables or making things out of wood in my little workshop.</p>
+        </section>
+        <section>
+            <h3>Press</h3>
+            <ul>
+                <li>Urban Sketchers: Drawing Attention. <a href="https://issuu.com/drawingattention/docs/da_sept_2023_final">Drawing buildings: Fearlessly</a> September 2023</li>
+            <li>Watercolour NZ Workshop review <a href="https://www.watercolournewzealand.nz/events/workshop-review-andrew-james.htm">"Fearless drawing with Pen & Watercolour" Workshop Review</a> May 2023</li>
+            </ul>
         </section>
     </main>
 
