--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </nav>
     </header>
 
-    <main>
-        <section>
-            <h2>Welcome!</h2>
-            <p>Explore my artwork and get to know me.</p>
-        </section>
+  <main class="homepage-main">
+        <div class="overlay">
+            <h2>Welcome to My Creative World</h2>
+            <p>Explore the art, illustrations, and stories behind them.</p>
+        </div>
     </main>
 
     <footer>
