--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="mailto:andrew.p.james@gmail.com">Contact</a></li>
             </ul>
         </nav>
     </header>
