--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
 
         <nav>
             <ul>
+               <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="mailto:andrew.p.james@gmail.com">Contact</a></li>
