--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Andrew James.</h1> <h3>Artist. Illustrator. Wellington, New Zealand</h3>
+        <h1>Andrew James.</h1> <h3>Artist. Illustrator.<br /> Wellington, New Zealand</h3>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
