--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <section>
            <h3>Hi, I'm Andrew. I'm an Illustrator from Wellington.</h3>
           <p>I love drawing on location. I've obsessively recorded my life in little books for over a decade.</p>
-          <p>I love making complex science understandable with words, drawings and humour. As a qualified meteorologist, I have science nous. And I can talk about much more than just the weather./p>
+          <p>I love making complex science understandable with words, drawings and humour. As a qualified meteorologist, I have science nous. And I can talk about much more than just the weather.</p>
           <p>When not drawing, you can find me chasing my kids, cooking elaborate meals, growing vegetables or making things out of wood in my little workshop.</p>
         </section>
         <section>
