--- a/maps.html
+++ b/maps.html
@@ -30,6 +30,8 @@
         <section>
             <div class="portfolio-gallery">
     <a href="images/WestlandWondersMap.jpg" data-lightbox="portfolio" data-title="Westland Wonders Map"><img src="images/WestlandWondersMap.jpg" alt="Artwork 1"></a>
+   <a href="images/DunedinMap.png" data-lightbox="portfolio" data-title="Dunedin Map"><img src="images/DunedinMap.png" alt="Artwork 1"></a>
+   <a href="images/RotoitiMap.png" data-lightbox="portfolio" data-title="Rotoiti Map"><img src="images/RotoitiMap.png" alt="Artwork 1"></a>
    
             </div>
         </section>
