--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="maps.html">Maps</a></li>
                 <li><a href="mailto:andrew.p.james@gmail.com">Contact</a></li>
             </ul>
         </nav>
