--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="maps.html">Maps</a></li>
                 <li><a href="mailto:andrew.p.james@gmail.com">Contact</a></li>
             </ul>
         </nav>
@@ -27,9 +28,10 @@
 
     <main>
         <section>
-           <h3>Hi, I'm Andrew. I'm an Illustrator from Wellington.</h3>
+          <h3>Hi, I'm Andrew. I'm an Illustrator from Wellington.</h3>
+            
           <p>I love drawing on location. I've obsessively recorded my life in little books for over a decade.</p>
-          <p>I love making complex science understandable with words, drawings and humour. As a qualified meteorologist, I have science nous. And I can talk about much more than just the weather.</p>
+          <p>I have a science background. I love making complex science understandable with words, drawings and humour. </p>
           <p>When not drawing, you can find me chasing my kids, cooking elaborate meals, growing vegetables or making things out of wood in my little workshop.</p>
         </section>
         <section>
