--- a/about.html
+++ b/about.html
@@ -30,16 +30,26 @@
         <section>
           <h3>Hi, I'm Andrew. I'm an Illustrator from Wellington.</h3>
             
-          <p>I love drawing on location. I've obsessively recorded my life in little books for over a decade.</p>
-          <p>I have a science background. I love making complex science understandable with words, drawings and humour. </p>
-          <p>When not drawing, you can find me chasing my kids, cooking elaborate meals, growing vegetables or making things out of wood in my little workshop.</p>
+          <p>
+Andrew James is a Wellington-based artist, illustrator, writer and educator. He usually has a pen in one hand and a sketchbook in the other.</p>
+
+<p>He started drawing to record a long trip, but that turned into keeping a record of his whole life in sketchbooks and led to an obsession with all kinds of drawing.</p>
+<p>Previously a communications meteorologist at MetService and a high school mathematics teacher, his science and education background lets him make complex ideas understandable with words and pictures.</p>
+<p>Enjoying the serious as well as the silly, Andrew's career highlights working with Scion researchers on a comic about the smell of possum butts and travelling to Poland to teach at the Urban Sketchers global symposium.
+</p>
+          
         </section>
+        <section>
+            <h3>Testimonials</h3>
+            <p><i>Like learning from a mad genius who is still lucid and coherent</i></p>
+        </section>   
         <section>
             <h3>Press</h3>
             <ul>
-                <li>Urban Sketchers: Drawing Attention. <a href="https://issuu.com/drawingattention/docs/da_sept_2023_final">Drawing buildings: Fearlessly</a> September 2023</li>
-            <li>Watercolour NZ Workshop review <a href="https://www.watercolournewzealand.nz/events/workshop-review-andrew-james.htm">"Fearless drawing with Pen & Watercolour" Workshop Review</a> May 2023</li>
-            </ul>
+                <li>RNZ Afternoons <a href="https://www.rnz.co.nz/national/programmes/afternoons/audio/2018978213/100-drawings-on-cuba-street">100 Drawings on Cuba Street</a> March 2025</li>
+                <li>Watercolour NZ Workshop review <a href="https://www.watercolournewzealand.nz/events/workshop-review-andrew-james.htm">"Fearless drawing with Pen & Watercolour" Workshop Review</a> May 2023</li>
+                 <li>Urban Sketchers: Drawing Attention. <a href="https://issuu.com/drawingattention/docs/da_sept_2023_final">Drawing buildings: Fearlessly</a> September 2023</li>
+             </ul>
         </section>
     </main>
 
