--- a/about.html
+++ b/about.html
@@ -41,14 +41,28 @@ Andrew James is a Wellington-based artist, illustrator, writer and educator. He 
         </section>
         <section>
             <h3>Testimonials</h3>
-            <p><i>Like learning from a mad genius who is still lucid and coherent</i></p>
+            <p><i>"Like learning from a mad genius who is still lucid and coherent"</i></p>
+            <p><i>"Like learning from a mad genius who is still lucid and coherent"</i></p>
         </section>   
+                    <h3>I've worked with</h3>
+
+<section><a href="https://www.watercolournewzealand.nz/">Watercolour New Zealand</a>, 
+<a href="https://www.wellingtonzinefest.com/">Wellington Zinefest</a>, 
+<a href="https://www.urbansketchers.org/">Urban Sketchers</a>, 
+<a href="https://predatorfreenz.org/">Predator Free New Zealand Trust</a>, 
+<a href="https://www.scionresearch.com/">Scion</a>, 
+<a href="https://www.sciencelearn.org.nz/">Science Learning Hub</a>, 
+<a href="https://www.scanz.co.nz/">SCANZ Science Communications Association of New Zealand</a>, 
+    
+<a href="https://www.landcareresearch.co.nz/">Manaaki Whenua – Landcare Research</a>, 
+<a href="https://creativemornings.com/cities/wlg">Creative Mornings Wellington</a>.
+</section>
+        
         <section>
             <h3>Press</h3>
             <ul>
                 <li>RNZ Afternoons <a href="https://www.rnz.co.nz/national/programmes/afternoons/audio/2018978213/100-drawings-on-cuba-street">100 Drawings on Cuba Street</a> March 2025</li>
-                <li>Watercolour NZ Workshop review <a href="https://www.watercolournewzealand.nz/events/workshop-review-andrew-james.htm">"Fearless drawing with Pen & Watercolour" Workshop Review</a> May 2023</li>
-                 <li>Urban Sketchers: Drawing Attention. <a href="https://issuu.com/drawingattention/docs/da_sept_2023_final">Drawing buildings: Fearlessly</a> September 2023</li>
+               <li>Urban Sketchers: Drawing Attention. <a href="https://issuu.com/drawingattention/docs/da_sept_2023_final">Drawing buildings: Fearlessly</a> September 2023</li>
              </ul>
         </section>
     </main>
